--- a/biblatex.bib
+++ b/biblatex.bib
@@ -2291,8 +2291,9 @@
   doi          = {10.1088/2058-9565/ab8e92},
   eprinttype   = {arXiv},
   eprint       = {2003.10611},
-  url          = {https://github.com/CQCL/pytket},
+  url          = {https://github.com/CQCL/tket},
   abstract     = {We present t$|$ket⟩, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t$|$ket⟩ is a language-agnostic optimising compiler designed to generate code for a variety of NISQ devices, which has several features designed to minimise the influence of device error. The compiler has been extensively benchmarked and outperforms most competitors in terms of circuit optimisation and qubit routing.},
+  keywords     = {tket},
   bibsource    = qplbib
 }
 
